# research_agent

./: .gitignore  CLAUDE.md  README.md  TODO.md  agent.example.yaml  agent.yaml  codex_resume_main.txt  codex_resume_main_2.txt  pyproject.toml  system_plan_architecture.md
data/: agent.db
docs/: evals.md  mvp_expectations.md  mvp_runbook.md
eval_runs/smoke/20251229_161301/: summary.json
evals/fixtures/: clinical_trial_abstract.txt
evals/suites/: smoke.yaml
runs/20251222_214603_c5f7ce/: report.md
runs/20251223_201951_3b5776/: provenance.json  report.md
runs/20251229_155406_20830a/: provenance.json  report.md
runs/20251229_162948_36f7f9/sources/: src_11bdea78a858.text.txt  src_190665b7dbe1.text.txt
runs/20251229_163010_f8a21e/sources/: src_9aa467baca4a.text.txt  src_eff04f41f27f.text.txt
runs/20251229_163055_abdb22/sources/: src_6870f638c3c9.text.txt
runs/20251229_163324_031186/: provenance.json  report.md
runs/20251229_163324_031186/sources/: src_e7183eba7872.text.txt
src/research_agent/: __init__.py  cli.py  config.py  logging.py  runner.py  types.py
src/research_agent/db/: schema.py
src/research_agent/evals/: __init__.py  artifacts.py  cases.py  runner.py  stages.py  stats.py  utils.py
src/research_agent/evidence/: adjudicate.py  canonicalize.py  extract.py  policy.py  reduce.py  store.py
src/research_agent/parse/: pdf.py  (+1 more)
tests/: stubs.py  test_config.py  test_db_schema.py  test_extract.py  test_parse.py  test_pipeline_water.py  test_reduce.py  test_search_google_pse_utils.py
tests/fixtures/: water_boiling_1.html  water_boiling_2.html
(+17 files in other folders)
